# dashboard

./: .env  .gitignore  database.py  db.json  docker-compose.yaml  main.py  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt  tasks.py
backend/app/: __init__.py  database.py  db.py  main.py  main_test.py  routes.py
backend/app/routers/CodeWars/: CodeWars.py  CodeWarsInterface.py  CodeWarsModels.py  CodeWarsSync.py  CodeWarsUtils.py  __init__.py  controller.py  model.py  model_test.py  schema.py  schema_test.py  service.py  service_test.py  test_CodeWars.py
backend/app/routers/Habitica/: Habitica.py  HabiticaInterface.py  HabiticaModels.py  HabiticaSync.py  HabiticaUtils.py
backend/app/routers/User/: __init__.py  controller.py  model.py  model_test.py  schema.py  schema_test.py  service.py  service_test.py
backend/app/test/: fixtures.py
backend/routers/CodeWars/: CodeWarsModels.py
front/: Dockerfile  package-lock.json  package.json
front/src/: App.js  setupProxy.js
front/src/GlobalCSS/: theme.css
routers/CodeWars/: CodeWars.py  CodeWarsInterface.py  CodeWarsModels.py  CodeWarsSync.py
routers/Habitica/: Habitica.py  HabiticaInterface.py  HabiticaModels.py  HabiticaSync.py
src/: App.css  App.js
src/Commponents/: CodeWarsClient.js  LangInfo.js
src/Commponents/CodeWars/: CodeWars.css  CodeWarsClient.js  CodeWarsClient_old.js  LangInfo.js  UserDetails.js
src/Commponents/Habitica/: HabiticaClient.css  HabiticaClient.js  Todos.js
src/GlobalCSS/: theme.css
src/utils/: utils.js
(+11 files in other folders)
